--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>globe-tracking-now</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>MALTIVA </title>
+    <meta name="description" content="Pkichain" />
+    <meta name="author" content="Pkichain" />
 
-    <meta property="og:title" content="globe-tracking-now" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="MALTIVA " />
+    <meta property="og:description" content="Pkichain MaltiVA" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="android-chrome-512x512.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Pkichain_dev" />
+    <meta name="twitter:image" content="android-chrome-512x512.png" />
   </head>
 
   <body>
